# emscripten-functions-test

./: .gitmodules  Cargo.toml  Makefile  main.cpp
patches/: emscripten_main_thread_fix.patch
src/: lib.rs
